Formulaire pour l'oublie de mot de passe => design

--- a/src/UserBundle/Resources/views/email/password_resetting.email.twig
+++ b/src/UserBundle/Resources/views/email/password_resetting.email.twig
@@ -1,1 +1,32 @@
-Salut !
+{% extends 'UserBundle:Default:layout.email.twig' %}
+
+{% block content %}
+
+    <section class="page-header">
+        <div class="row">
+            <div class="col-lg-4">
+
+            </div>
+            <div class="col-lg-8">
+                <h1>{{ user.username }}</h1>
+            </div>
+        </div>
+    </section>
+
+    <section class="row">
+        <div class="col-lg-4 col-lg-offset-4">
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">
+                        Vous avez oubliez votre mot de passe ?
+                        Pas de soucis, cliquez sur le bouton suivant pour pouvoir changer de mot de passe.
+                    </p>
+                    <a href="#" class="btn btn-primary">Changer de mot de passe</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+{% endblock %}
