Envoie du mail avec le lien qui permet d'accèder au formulaire pour modifier le mot de passe. Existence d'un token pour vérifier si le formulaire concerne bien le bon utilisateur. Il faut maintenant gérer quand le formulaire est soumis

--- a/src/UserBundle/Resources/views/email/password_resetting.email.twig
+++ b/src/UserBundle/Resources/views/email/password_resetting.email.twig
@@ -23,7 +23,7 @@
                         Vous avez oubliez votre mot de passe ?
                         Pas de soucis, cliquez sur le bouton suivant pour pouvoir changer de mot de passe.
                     </p>
-                    <a href="#" class="btn btn-primary">Changer de mot de passe</a>
+                    <a href="{{ url('users_resetting_password', {token_resetting: token_resetting}) }}" class="btn btn-primary">Changer de mot de passe</a>
                 </div>
             </div>
         </div>
