--- a/src/UserBundle/Resources/views/form/change_password.html.twig
+++ b/src/UserBundle/Resources/views/form/change_password.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-center justify-content-sm-center justify-content-center">
         <div class="col-6 col-offset-3">
             {{ form_start(form, {'attr': {'class': 'form-horizontal well'}}) }}
                 <legend>Change ton mot de passe</legend>
@@ -20,6 +20,7 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">Valider</button>
                     </div>
+                    {{ form_rest(form) }}
                 </fieldset>
             {{ form_end(form) }}
         </div>
