--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,11 +1,16 @@
 html {
     height: 100%;
+    overflow-y: hidden;
 }
 
 body {
     padding: 0;
     margin-top: 3em;
     height: 100%;
+}
+
+.container-fluid {
+
 }
 
 .slide {
