- Vérifie lors du changement de mot de passe, si les 2 mots de passe sont les mêmes  - Token pour le changement de mot de passe remis à null

--- a/src/CovoiturageBundle/Resources/views/Default/index.html.twig
+++ b/src/CovoiturageBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,13 @@
-Hello World!
+{% extends '::base.html.twig' %}
+
+{% block content%}
+
+    <div class="row justify-content-md-center justify-content-sm-center justify-content-center">
+        <div class="col-6 col-offset-3">
+            <div class="well">
+                Good
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
