--- a/src/UserBundle/Resources/views/form/change_password.html.twig
+++ b/src/UserBundle/Resources/views/form/change_password.html.twig
@@ -1,4 +1,4 @@
-{% extends 'UserBundle:Default:layout.html.twig' %}
+{% extends '::base.html.twig' %}
 
 {% block content %}
 
@@ -7,12 +7,12 @@
             {{ form_start(form, {'attr': {'class': 'form-horizontal well'}}) }}
                 <legend>Change ton mot de passe</legend>
                 <fieldset>
-                    <div class="form-group">
+                    <div class="form-group has-error">
                         {{ form_label(form.password) }}
                         {{ form_widget(form.password) }}
                         {{ form_errors(form.password) }}
                     </div>
-                    <div class="form-group">
+                    <div class="form-group has-error">
                         {{ form_label(form.password_confirmation) }}
                         {{ form_widget(form.password_confirmation) }}
                         {{ form_errors(form.password_confirmation) }}
