Test unitaire en plus + fix bug

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
             <div id="f3" class="slide"></div>
 
             <div class="content">
-                {% for label, messages in app.flashes %}
+                {% for label, messages in app.session.flashbag.all %}
                     {% for message in messages %}
                         <div class="alert alert-{{ label }}">
                             {{ message }}
